# stippy

./: README.md  stip_pb2.py  stip_pb2_grpc.py  stippy.py  test.py
examples/: albums.py  correlate-images.py  extents.py  images.py  nodes.py  read-file.py  sample-split.py
libs/: stip_pb2.py  stip_pb2_grpc.py
libstip-rs/: Cargo.toml
libstip-rs/src/: lib.rs
