[package]
name = "libstip-rs"
version = "0.1.0"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stiprs"
crate-type = ["cdylib"]

[dependencies]
cpython = { version = "0.5", features = ["extension-module"] }
failure = "0.1"
gdal = { path = "../../gdal" }
st-image = { path = "../../st-image" }
